# wappy

./: LICENSE  pyproject.toml  wappy.toml
test/: server.py
wappy/: bastard.py  configuration.py  main.py  utils.py  wappclient.py
