[tool.poetry]
name = "wappy"
version = "0.2.0"
description = "Middleware for wiring hardware with Seluxit cloud"
authors = ["Sigitas Dagilis <sigis@seluxit.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"
flakehell = "^0.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
